frontend/tests/errors/ER-024/fixed_cast_not_implemented/test.vx
&^main() -> #i32 {
  x:#u8.8 = (#u8.8)1;
  y:#f64 = (#f64)x;
  0
}
